--- a/templates/login.html
+++ b/templates/login.html
@@ -8,20 +8,16 @@
 </head>
 <body>
     <section id="login">
-        <div class="form">
+      <div class="form">
           <h2>Login</h2>
-          <form class="login-form">
+          <form class="login-form" action="/enter_account" method="POST" id="login-form">
             <input type="text" name="email" id="email" placeholder="email" />
-            <input
-              type="password"
-              name="password"
-              id="password"
-              placeholder="password"
-            />
+            <input type="password" name="password" id="password" placeholder="password" />
             <button type="submit">login</button>
             <p class="message">
               Not registered? <a href="/register">Create an account</a>
             </p>
+
           </form>
         </div>
       </section>
