--- a/templates/register.html
+++ b/templates/register.html
@@ -10,20 +10,12 @@
     <section id="register">
         <div class="form">
           <h2>Register</h2>
-          <form class="register-form">
+          <form class="register-form" action="/create_account" method="POST" id="register-form">
             <input type="text" name="email" id="register-email" placeholder="email" />
-            <input
-              type="password"
-              name="password"
-              id="register-password"
-              placeholder="password"
-            />
-            <input
-              type="password"
-              name="re-password"
-              id="repeat-password"
-              placeholder="repeat password"
-            />
+            <input type="text" name="first-name" placeholder="first name"/>
+            <input type="text" name="last-name" placeholder="last name"/>
+            <input type="password" name="password" id="register-password" placeholder="password"/>
+            <input type="password" name="re-password" id="repeat-password" placeholder="repeat password"/>
             <button type="submit">register</button>
             <p class="message">Already registered? <a href="/login">Login</a></p>
           </form>
