--- a/styles/details.css
+++ b/styles/details.css
@@ -1,3 +1,11 @@
+#summary {
+  margin: auto;
+  width: 100%;
+  text-align: left;
+  font-size: small;
+  color: rgb(240, 14, 52);
+}
+
 #details-wrapper {
   background-color: white;
   margin: 50px auto;
