font-family fixed

--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,7 @@
           <div class="product">
             <p class="title">{{.Title}}</p>
             <img src="{{.Src}}" alt="some-img"/>
-            <div id="summary">
+            <div id="summary" style="font-family: 'Alkalami', serif;">
                 description : {{.Description}} <br>
                 autor : {{.Author.FirstName}} {{.Author.LastName}} <br>
                 size : {{.Width}} x {{.Height}} <br>
@@ -61,7 +61,7 @@
             <div class="product">
                 <p class="title">{{.Title}}</p>
                 <img src="{{.Src}}" alt="some-img"/>
-                <div id="summary">
+                <div id="summary" style="font-family: 'Alkalami', serif;">
                     description : {{.Description}} <br>
                     autor : {{.Author.FirstName}} {{.Author.LastName}} <br>
                     size : {{.Width}} x {{.Height}} <br>
