--- a/styles/navigation.css
+++ b/styles/navigation.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Alkalami&family=Kaushan+Script&display=swap');
 
+#greeting {
+  color: rgb(235, 76, 102);
+  padding: 10px;
+  margin-right: 7em;
+  font-weight: 400;
+}
 
 body {
   color: rgb(227, 163, 174);
@@ -32,13 +38,6 @@ nav {
   display: flex;
   justify-content: space-between;
   
-}
-
-#greeting {
-  color: rgb(235, 76, 102);
-  margin-top: -0.60em;
-  margin-right: 7em;
-  font-weight: 400;
 }
 
 #genre-drop-down {
