--- a/styles/navigation.css
+++ b/styles/navigation.css
@@ -24,7 +24,7 @@ header {
   align-items: center;
   padding: -0.4em;
   background: rgb(255, 246, 246);
-  border-bottom: 3px dotted  rgb(231, 103, 124);
+  border-bottom: 2px dotted  rgb(231, 103, 124);
   width: 100%;
   position: fixed;
   top: 0;
@@ -73,8 +73,8 @@ footer {
   color:  rgb(240, 14, 52);
   font-weight: bolder;
   text-align: center;
-  position: fixed;
-  bottom: 0;
+  position:absolute;
+  bottom: -30%;
   left: 0;
   width: 100%;
   height: 28px;
