--- a/templates/register.html
+++ b/templates/register.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../styles/styles.css" />
+  <link rel="icon" type="image/png" sizes="32x32" href="../images/logo.png">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="../styles/styles.css"  type="text/css" rel="stylesheet">
     <title>Register</title>
 </head>
 <body>
