--- a/templates/test.html
+++ b/templates/test.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" type="image/png" sizes="32x32" href="../images/logo.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="../styles/styles.css"  type="text/css" rel="stylesheet">
     <title>Image Selector</title>
 </head>
 <body>
