--- a/styles/form.css
+++ b/styles/form.css
@@ -1,5 +1,44 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:300);
 
+/* CSS for modal dialog */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1; 
+  left: 0;
+  top: 0;
+  width: 100%; 
+  height: 100%; 
+  overflow: auto;
+  background-color: rgba(0,0,0,0.4); 
+}
+
+/* CSS for modal content */
+.modal-content {
+  margin: 15% auto; 
+  text-align: center;
+  padding: 20px;
+  width: 20%;
+  height: 25%;
+  background: rgb(243, 182, 192);
+  color: #8b0a0a;
+  cursor: pointer;
+  border-radius: 5px;
+  border: 1px solid;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+}
+
+/* Close button style */
+.close {
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  background: rgb(243, 182, 192);
+  color: #8b0a0a;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
 #summary {
   margin: auto;
   padding-left: 2em;
