--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -69,7 +69,8 @@ box-shadow: -4px 3px 25px 1px rgba(0,0,0,0.55);
  
 }
 .product img {
-  height:16vw;
+  max-height: 60%;
+  max-width: 60%;
   padding: 10px;
   
 }
@@ -107,3 +108,4 @@ h2 {
   padding: 10px;
   margin: auto;
 }
+
