--- a/templates/create.html
+++ b/templates/create.html
@@ -11,9 +11,9 @@
     <section id="create">
         <div class="form" >
           <h2>Add Painting</h2>
-          <form class="create-form" action="/create_painting" method="POST">
+          <form id="uploadForm" class="create-form" action="/create_painting" method="POST" enctype="multipart/form-data">
             <input type="text" name="name" id="name" placeholder="Painting Name" />
-            <input type="text" name="imageUrl" id="product-image" placeholder="Painting Image" />
+            <input type="file" accept="image/*" name="imageUrl" id="product-image"/>
             <label id="genre-drop-down" for="options">Genre:</label><select id="options" name="category">
               {{range .}}
                 <option value="{{.}}">{{.}}</option>
@@ -26,5 +26,26 @@
           </form>
         </div>
       </section>
+      <!-- <script>
+        // Submit form on file selection
+        document.getElementById("uploadForm").addEventListener("change", function() {
+            this.submit();
+        });
+
+        // Handle response from server
+        document.getElementById("uploadForm").addEventListener("submit", function(event) {
+            event.preventDefault();
+            fetch('/upload', {
+                method: 'POST',
+                body: new FormData(this)
+            })
+            .then(response => response.text())
+            .then(src => {
+                // Display the uploaded photo
+                document.getElementById("imageContainer").innerHTML = `<img src="${src}" alt="Uploaded Photo">`;
+            })
+            .catch(error => console.error('Error:', error));
+        });
+    </script> -->
 </body>
 </html>
